--- a/webserver/views/error.ejs
+++ b/webserver/views/error.ejs
@@ -1,3 +1,13 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html>
+<head>
+    <title></title>
+</head>
+<body>
+
+<h1><%=message%></h1>
+<h2><%=error.status%></h2>
+<div><%=error.stack%></div>
+
+</body>
+</html>
