--- a/webserver/public/stylesheets/style-menu.css
+++ b/webserver/public/stylesheets/style-menu.css
@@ -1,9 +1,12 @@
 /* Sticky footer styles
         -------------------------------------------------- */
-html,
-body {
+html, body {
     height: 100%;
-    /* The html and body elements cannot have any padding or margin. */
+    margin: 0;
+    padding: 0;
+}
+#map {
+    height: 600px;
 }
 
 /* Wrapper for page content to push down footer */
@@ -21,7 +24,6 @@ body {
     height: 60px;
     background-color: #f5f5f5;
 }
-
 
 /* Custom page CSS
 -------------------------------------------------- */
