--- a/webserver/views/menu.ejs
+++ b/webserver/views/menu.ejs
@@ -10,6 +10,8 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfgdw0Y5DIuWpWLF-6vEDORKEh3YgxuCo"></script>
+
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
 
@@ -26,9 +28,18 @@
         <div class="container-fluid">
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
+
                     <li ng-class="{active:activeMenu === menuItem}" ng-repeat="menuItem in menuItems">
-                        <a ng-click="setActive(menuItem)" href="{{menuItem.url}}">{{menuItem.description}}</a>
+                        <a ng-click="setActive(menuItem)" ng-show="menuItem.subItems.length == 0" href="{{menuItem.url}}">{{menuItem.description}}</a>
+
+                        <a ng-click="setActive(menuItem)" class="dropdown-toggle" data-toggle="dropdown" ng-show="menuItem.subItems.length > 0" href="_self">
+                            {{menuItem.description}}<span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li ng-repeat="subMenuItem in menuItem.subItems"><a href="{{subMenuItem.url}}">{{subMenuItem.description}}</a></li>
+                        </ul>
                     </li>
+
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
@@ -38,18 +49,7 @@
     </nav>
 
     <div class="container-fluid text-center">
-        <div class="row content">
-            <div class="col-sm-2 sidenav">
-            </div>
-
-            <div class="col-sm-8 text-left">
-                <div ng-view>
-                </div>
-            </div>
-
-            <div class="col-sm-2 text-left">
-            </div>
-        </div>
+        <div ng-view></div>
     </div>
 </div><!-- Wrap Div end -->
 
