--- a/client/MyApplication/app/src/main/res/layout/activity_ciudades.xml
+++ b/client/MyApplication/app/src/main/res/layout/activity_ciudades.xml
@@ -1,182 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/vertScrollView"
-    tools:context="com.example.pc.myapplication.CiudadesActivity"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:fillViewport="true"
-    android:overScrollMode="never"
-    android:scrollbars="vertical">
+    android:layout_height="match_parent"
+    android:id="@+id/ciudadesV"
+    tools:context="com.example.pc.myapplication.CiudadesActivity">
 
-    <LinearLayout
+
+    <AutoCompleteTextView
+        android:id="@+id/autoCompleteTextView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <include
-            layout="@layout/toolbar"
-            android:id="@+id/include3" />
-
-        <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:text="" />
-
-        <RelativeLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/relativelayout"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp">
-
-            <ImageView
-                android:id="@+id/imageTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ba6" />
-
-            <TextView
-                android:id="@+id/myImageViewText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/imageTitle"
-                android:layout_alignLeft="@id/imageTitle"
-                android:layout_alignRight="@id/imageTitle"
-                android:layout_alignTop="@id/imageTitle"
-                android:layout_margin="1dp"
-                android:gravity="center"
-                android:text="Buenos Aires"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@color/white"
-                android:textSize="36sp"
-                android:textStyle="bold" />
-
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Información"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textStyle="bold"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"/>
-
-        <LinearLayout
-            android:id="@+id/linlaINFO"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Buenos Aires es la capital de la República Argentina  y se llama desde 1994, Ciudad Autónoma de Buenos Aires. Es la ciudad más importante del país y una de las más grandes de América Latina, con 3 millones de habitantes, los que contando el área metropolitana, llegan a 10 millones. Es uno de los 10 centros urbanos más poblados del mundo."
-                android:id="@+id/infoText"
-                android:ems="15"
-                android:layout_marginLeft="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginEnd="5dp"/>
-
-            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/map2"
-                android:name="com.google.android.gms.maps.SupportMapFragment"/>
-
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/video"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Videos"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textStyle="bold"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"/>
-
-        <HorizontalScrollView
-            android:id="@+id/horizScrollVIDEO"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:fillViewport="true"
-            android:overScrollMode="never"
-            android:scrollbars="horizontal"
-            android:layout_marginBottom="10dp">
-
-            <LinearLayout
-                android:id="@+id/linlaVIDEO"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-            </LinearLayout>
-        </HorizontalScrollView>
-
-        <TextView
-            android:id="@+id/imagen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fotos"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textStyle="bold"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"/>
-
-        <HorizontalScrollView
-            android:id="@+id/horizScrollIMG"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:fillViewport="true"
-            android:overScrollMode="never"
-            android:scrollbars="horizontal"
-            android:layout_marginBottom="10dp">
-
-            <LinearLayout
-                android:id="@+id/linlaIMG"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-            </LinearLayout>
-        </HorizontalScrollView>
-
-        <TextView
-            android:id="@+id/audio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Audios"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textStyle="bold"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"/>
-
-        <HorizontalScrollView
-            android:id="@+id/horizScrollAUDIO"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:fillViewport="true"
-            android:overScrollMode="never"
-            android:scrollbars="horizontal"
-            android:layout_marginBottom="10dp">
-
-            <LinearLayout
-                android:id="@+id/linlaAUDIO"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-            </LinearLayout>
-        </HorizontalScrollView>
-
-    </LinearLayout>
-</ScrollView>
+        android:layout_height="wrap_content"
+        android:text=""
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
+</android.support.constraint.ConstraintLayout>
