--- a/webserver/public/stylesheets/style-menu.css
+++ b/webserver/public/stylesheets/style-menu.css
@@ -1,39 +1,111 @@
 /* Sticky footer styles
-        -------------------------------------------------- */
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-#map {
-    height: 600px;
-}
-
-/* Wrapper for page content to push down footer */
-#wrap {
+-------------------------------------------------- */
+html {
+    position: relative;
     min-height: 100%;
-    height: auto;
-    /* Negative indent footer by its height */
-    margin: 0 auto -60px;
-    /* Pad bottom by footer height */
-    padding: 0 0 60px;
 }
-
-/* Set the fixed height of the footer here */
-#footer {
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
     height: 60px;
     background-color: #f5f5f5;
 }
+
 
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 
-.container {
-    width: auto;
-    max-width: 680px;
-    padding: 0 15px;
+body > .container {
+    padding: 60px 15px 0;
 }
-.container .credit {
+.container .text-muted {
     margin: 20px 0;
 }
+
+.footer > .container {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+code {
+    font-size: 80%;
+}
+
+.previewDeImagenes {
+    margin-top:10px;
+    overflow-x:auto;
+    white-space:nowrap;
+}
+
+.previewDeImagenes .imagenPreview {
+    display: inline-block;
+    *display: inline;/*For IE7*/
+    *zoom:1;/*For IE7*/
+    width:300px;
+    height:260px;
+    position:relative;
+    vertical-align:top;
+    margin-right:10px;
+    white-space:normal;
+}
+
+/*
+.previewDeImagenes {
+  margin-top: 10px;
+  overflow-x:auto;
+  white-space: nowrap;
+}
+
+.imagenPreview {
+  width:300px;
+  height:260px;
+  position:relative;
+  display:inline-block;
+  overflow:hidden;
+}
+
+.imagenPreview > .imagePreviewItem {
+  position:absolute;
+  top:50%;
+  left:50%;
+  min-height:100%;
+  display:block;
+  -webkit-transform: translate(-50%, -50%);
+  min-width:100%;
+}
+*/
+
+.previewDeVideos {
+    margin-top:10px;
+    overflow-x:auto;
+    white-space:nowrap;
+}
+
+.previewDeVideos .videoPreview {
+    display: inline-block;
+    *display: inline;/*For IE7*/
+    *zoom:1;/*For IE7*/
+    width:320px;
+    height:260px;
+    position:relative;
+    vertical-align:top;
+    margin-right:10px;
+    white-space:normal;
+}
+
+.previewDeAudios {
+    position:relative;
+    margin-top: 10px;
+}
+
+.vcenter {
+    vertical-align: middle;
+}
+
