--- a/webserver/views/menu.ejs
+++ b/webserver/views/menu.ejs
@@ -20,43 +20,44 @@
     <script type="text/javascript" src="app/ciudades/module.js"></script>
     <script type="text/javascript" src="app/ciudades/controllers.js"></script>
 </head>
-<body>
+<body ng-app="tripsApp" ng-controller="tripsAppController">
 
-<!-- Wrap all page content here -->
-<div id="wrap" ng-app="tripsApp" ng-controller="tripsAppController">
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-
-                    <li ng-class="{active:activeMenu === menuItem}" ng-repeat="menuItem in menuItems">
-                        <a ng-click="setActive(menuItem)" ng-show="menuItem.subItems.length == 0" href="{{menuItem.url}}">{{menuItem.description}}</a>
-
-                        <a ng-click="setActive(menuItem)" class="dropdown-toggle" data-toggle="dropdown" ng-show="menuItem.subItems.length > 0" href="_self">
-                            {{menuItem.description}}<span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li ng-repeat="subMenuItem in menuItem.subItems"><a href="{{subMenuItem.url}}">{{subMenuItem.description}}</a></li>
-                        </ul>
-                    </li>
-
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container-fluid text-center">
-        <div ng-view></div>
-    </div>
-</div><!-- Wrap Div end -->
-
-<div id="footer">
+<!-- Fixed navbar -->
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand">Trips</a>
+        </div>
+
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li ng-class="{active:activeMenu === menuItem}" ng-repeat="menuItem in menuItems">
+                    <a ng-click="setActive(menuItem)" href="{{menuItem.url}}">{{menuItem.description}}</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+            </ul>
+        </div><!--/.nav-collapse -->
     </div>
+</nav>
+
+<!-- Begin page content -->
+<div class="container">
+    <div ng-view></div>
 </div>
+
+<footer class="footer">
+    <div class="container">
+        <p class="text-muted">Trips web System</p>
+    </div>
+</footer>
 
 </body>
 </html>
