--- a/webserver/public/app/ciudades/views/listado.html
+++ b/webserver/public/app/ciudades/views/listado.html
@@ -50,7 +50,7 @@
         </div>
         <div class="panel-footer">
             <div class="btn-group" role="group" aria-label="edit-remove">
-                <a href="#/ciudades/info/{{id}}" class="btn btn-default" role="button">Edit</a>
+                <a href="#/ciudades/edit/{{id}}" class="btn btn-default" role="button">Edit</a>
                 <button type="button" class="btn btn-default" ng-click="deleteCiudad(id)">Remove</button>
             </div>
         </div>
