--- a/webserver/views/menu.ejs
+++ b/webserver/views/menu.ejs
@@ -19,6 +19,8 @@
     <script type="text/javascript" src="app/controllers.js"></script>
     <script type="text/javascript" src="app/ciudades/module.js"></script>
     <script type="text/javascript" src="app/ciudades/controllers.js"></script>
+    <script type="text/javascript" src="app/atracciones/module.js"></script>
+    <script type="text/javascript" src="app/atracciones/controllers.js"></script>
 </head>
 <body ng-app="tripsApp" ng-controller="tripsAppController">
 
