--- a/webserver/public/app/ciudades/views/listado.html
+++ b/webserver/public/app/ciudades/views/listado.html
@@ -30,7 +30,7 @@
                     </a>
                 </div>
                 <div class="col-xs-6 col-md-9">
-                    <h3>{{ciudad.name}}</h3>
+                    <h3>{{ciudad.nombre}}</h3>
                     <div class="row">
                         <label class="col-sm-2 col-form-label">País</label>
                         <div class="col-sm-10">
@@ -40,7 +40,7 @@
                     <div class="row">
                         <label class="col-sm-2 col-form-label">Descripción</label>
                         <div class="col-sm-10">
-                            {{ciudad.description}}
+                            {{ciudad.descripcion}}
                         </div>
                     </div>
 
