--- a/client/MyApplication/app/src/main/res/layout/atraccion_item.xml
+++ b/client/MyApplication/app/src/main/res/layout/atraccion_item.xml
@@ -14,7 +14,8 @@
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/df_image"/>
 
     <TextView
         android:id="@+id/textView2"
