--- a/client/MyApplication/app/src/main/res/layout/activity_atraccion.xml
+++ b/client/MyApplication/app/src/main/res/layout/activity_atraccion.xml
@@ -14,52 +14,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <include
             layout="@layout/toolbar"
             android:id="@+id/include3" />
 
+        <TextView
+            android:id="@+id/nombreAtr"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textSize="36sp"
+            android:textStyle="bold" />
+
         <android.support.v4.view.ViewPager
             android:id="@+id/myviewpager"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_gravity="center"
-            android:overScrollMode="never" />
-
-        <RelativeLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/relativelayout"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp">
-
-            <ImageView
-                android:id="@+id/imageTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ba6" />
-
-            <TextView
-                android:id="@+id/cityTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/imageTitle"
-                android:layout_alignLeft="@id/imageTitle"
-                android:layout_alignRight="@id/imageTitle"
-                android:layout_alignTop="@id/imageTitle"
-                android:layout_margin="1dp"
-                android:gravity="center"
-                android:text="Buenos Aires"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@color/white"
-                android:textSize="36sp"
-                android:textStyle="bold" />
-
-        </RelativeLayout>
+            android:overScrollMode="never"
+            android:background="@android:color/darker_gray"/>
 
         <TextView
             android:id="@+id/info"
@@ -68,8 +47,8 @@
             android:text="@string/informacion"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textStyle="bold"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"/>
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"/>
 
         <LinearLayout
             android:id="@+id/linlaINFO"
@@ -80,7 +59,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Buenos Aires es la capital de la República Argentina  y se llama desde 1994, Ciudad Autónoma de Buenos Aires. Es la ciudad más importante del país y una de las más grandes de América Latina, con 3 millones de habitantes, los que contando el área metropolitana, llegan a 10 millones. Es uno de los 10 centros urbanos más poblados del mundo."
                 android:id="@+id/infoText"
                 android:ems="15"
                 android:layout_marginLeft="5dp"
@@ -91,7 +69,7 @@
             <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="fill_parent"
-                android:layout_height="match_parent"
+                android:layout_height="150dp"
                 android:id="@+id/map2"
                 android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
@@ -108,22 +86,13 @@
             android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"/>
 
-        <HorizontalScrollView
-            android:id="@+id/horizScrollVIDEO"
-            android:layout_width="fill_parent"
+        <ImageView
+            android:id="@+id/videoIMG"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fillViewport="true"
-            android:overScrollMode="never"
-            android:scrollbars="horizontal"
-            android:layout_marginBottom="10dp">
-
-            <LinearLayout
-                android:id="@+id/linlaVIDEO"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-            </LinearLayout>
-        </HorizontalScrollView>
+            android:scaleType="centerCrop"
+            android:src="@drawable/df_video"
+            android:layout_weight="0.43" />
 
         <TextView
             android:id="@+id/imagen"
