--- a/client/MyApplication/app/src/main/res/layout/mf.xml
+++ b/client/MyApplication/app/src/main/res/layout/mf.xml
@@ -11,17 +11,11 @@
         android:orientation="vertical"
         android:gravity="center"
         android:background="@android:color/transparent">
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="AAAAAAAAA" />
-        <Button
+
+        <ImageView
             android:id="@+id/content"
-            android:layout_width="190dp"
-            android:layout_height="120dp"
-            android:background="@android:color/black">
-        </Button>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ImageView>
     </com.example.pc.myapplication.carruselTools.CarruselLinearLayout>
 </LinearLayout>
