--- a/client/MyApplication/app/src/main/res/menu/activity_main_drawer.xml
+++ b/client/MyApplication/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,6 +26,10 @@
             android:id="@+id/logout"
             android:icon="@drawable/logout"
             android:title="@string/logout"/>
+        <item
+            android:id="@+id/config"
+            android:icon="@drawable/logout"
+            android:title="@string/config"/>
     </group>
 
 </menu>
