--- a/webserver/public/app/ciudades/views/listado.html
+++ b/webserver/public/app/ciudades/views/listado.html
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-xs-6 col-md-3">
                     <a href="#/ciudades/info/{{id}}" class="thumbnail">
-                        <img ng-src="{{ciudad.imgSrc}}" alt="" class="img-responsive"/>
+                        <img ng-src="/api/ciudad/{{ciudad._id}}/imagen" alt="" class="img-responsive"/>
                     </a>
                 </div>
                 <div class="col-xs-6 col-md-9">
