--- a/webserver/views/menu.ejs
+++ b/webserver/views/menu.ejs
@@ -39,7 +39,7 @@
 
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li ng-class="{active:activeMenu === menuItem}" ng-repeat="menuItem in menuItems">
+                <li ng-class="{active: isActive(menuItem)}" ng-repeat="menuItem in menuItems">
                     <a ng-click="setActive(menuItem)" href="{{menuItem.url}}">{{menuItem.description}}</a>
                 </li>
             </ul>
