--- a/client/MyApplication/app/src/main/res/layout/fragment_ciudad.xml
+++ b/client/MyApplication/app/src/main/res/layout/fragment_ciudad.xml
@@ -26,10 +26,10 @@
 
             <ImageView
                 android:id="@+id/imageTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/df_image" />
+                android:background="@drawable/img_border"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
