--- a/client/MyApplication/app/src/main/res/layout/atraccion_item.xml
+++ b/client/MyApplication/app/src/main/res/layout/atraccion_item.xml
@@ -10,12 +10,12 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/df_image"/>
+        android:background="@drawable/img_border"/>
 
     <TextView
         android:id="@+id/textView2"
