--- a/client/MyApplication/app/src/main/res/layout/fragment_ciudad.xml
+++ b/client/MyApplication/app/src/main/res/layout/fragment_ciudad.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/vertScrollView"
     tools:context="com.example.pc.myapplication.CiudadActivity"
@@ -68,13 +66,13 @@
         </RelativeLayout>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/infoText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"
             android:layout_marginRight="5dp"
-            android:layout_marginEnd="5dp"/>
+            android:layout_marginStart="5dp" />
 
     </LinearLayout>
 </ScrollView>
