Correcciones de typos.  #44

--- a/webserver/public/app/atracciones/views/listado.html
+++ b/webserver/public/app/atracciones/views/listado.html
@@ -2,7 +2,7 @@
     <div class='page-header'>
         <div class='btn-toolbar pull-right'>
             <div class='btn-group'>
-                <a href="#/atracciones/add" class="btn btn-primary" role="button">Agregar atraccion</a>
+                <a href="#/atracciones/add" class="btn btn-primary" role="button">Agregar atracción</a>
             </div>
         </div>
         <h1>Listado de atracciones</h1>
