--- a/webserver/public/app/ciudades/views/edit.html
+++ b/webserver/public/app/ciudades/views/edit.html
@@ -71,7 +71,7 @@
             </div>
 
             <div class="form-group row">
-                <button type="submit" class="btn btn-primary center-block">Editar ciudad</button>
+                <button type="submit" class="btn btn-primary center-block">Guardar</button>
             </div>
         </form>
     </div>
