--- a/webserver/public/app/ciudades/views/add.html
+++ b/webserver/public/app/ciudades/views/add.html
@@ -49,7 +49,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-6 col-md-3">
-                            <img ng-src="{{ciudad.imgSrc}}" class="img-responsive"/>
+                            <img ng-show="ciudad.imgSrc" ng-src="{{ciudad.imgSrc}}" class="img-responsive"/>
                         </div>
                         <div class="col-xs-6 col-md-9">
                             <h3>{{ciudad.nombre}}</h3>
@@ -68,6 +68,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="alert alert-danger {{alert.class}}">
+                {{alert.msg}}
             </div>
 
             <div class="form-group row">
