--- a/webserver/public/app/ciudades/views/edit.html
+++ b/webserver/public/app/ciudades/views/edit.html
@@ -70,6 +70,10 @@
                 </div>
             </div>
 
+            <div class="alert alert-danger {{alert.class}}">
+                {{alert.msg}}
+            </div>
+
             <div class="form-group row">
                 <button type="submit" class="btn btn-primary center-block">Guardar</button>
             </div>
