#36. Falta que el server devuelva error cuando se intenta borrar una ciudad que tiene atracciones. Ya se valida si hay error al hacer el request de borrar en el client-side.

--- a/webserver/public/app/ciudades/views/listado.html
+++ b/webserver/public/app/ciudades/views/listado.html
@@ -10,6 +10,11 @@
         <h1>Listado de ciudades</h1>
     </div>
 
+    <!-- Error header -->
+    <div id="errorContainer">
+
+    </div>
+
     <!-- Buscador -->
     <div class="panel panel-default">
         <div class="panel-body">
