--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -77,14 +77,14 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Hora de apertura</label>
                     <div class="col-sm-10">
-                        <input required type="time" class="form-control" ng-model="atraccion.horaApertura">
+                        <input required type="text" class="form-control" ng-model="atraccion.horaApertura">
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Hora de cierre</label>
                     <div class="col-sm-10">
-                        <input required type="time" class="form-control" ng-model="atraccion.horaCierre">
+                        <input required type="text" class="form-control" ng-model="atraccion.horaCierre">
                     </div>
                 </div>
 
