--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -6,7 +6,7 @@
                 <a href="#/atracciones" class="btn btn-primary" role="button">Volver al listado de atracciones</a>
             </div>
         </div>
-        <h1>Agregar atracción</h1>
+        <h1>{{title}}</h1>
 
     </div>
 
@@ -16,7 +16,7 @@
 
     <div class="panel panel-default" ng-show="ciudades.length > 0">
         <div class="panel-body">
-            <form ng-submit="submitAddAtraccion()">
+            <form ng-submit="submitAtraccion()">
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Nombre de atracción</label>
                     <div class="col-sm-10">
@@ -27,7 +27,7 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Ciudad de la atracción</label>
                     <div class="col-sm-10">
-                        <select required ng-model="ciudadSelected" ng-options="ciudad.nombre for ciudad in ciudades">
+                        <select required ng-model="atraccion.ciudadSelected" ng-options="ciudad.nombre for ciudad in ciudades">
                         </select>
                     </div>
                 </div>
@@ -52,9 +52,9 @@
                     <div class="col-sm-10">
                         <div class="input-group">
                             <span class="input-group-addon" id="basic-addon1">
-                                <input ng-model="monedaCosto" list="monedas">
+                                <input ng-model="atraccion.monedaCosto" list="monedas">
                                     <datalist id="monedas">
-                                        <option value="{{moneda}}" ng-repeat="moneda in monedas">
+                                        <option value="{{moneda}}" ng-repeat="moneda in atraccion.monedas">
                                     </datalist>
                             </span>
                             <input required step="any" min="0" type="number" ng-model="atraccion.montoCosto" class="form-control" placeholder="Costo de la atracción">
@@ -80,7 +80,7 @@
                     <label class="col-sm-2 col-form-label">Duración promedio</label>
                     <div class="col-sm-10">
                         <div class="input-group">
-                            <input required type="number" min="1" class="form-control" placeholder="Duración promedio de la atracción">
+                            <input ng-model="atraccion.duracion" required type="number" min="1" class="form-control" placeholder="Duración promedio de la atracción">
                             <span class="input-group-addon" id="basic-addon2">minutos</span>
                         </div>
                     </div>
@@ -89,13 +89,13 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Clasificación</label>
                     <div class="col-sm-10">
-                        <select ng-model="clasificacionSelected" ng-options="clasificacion for clasificacion in clasificaciones">
+                        <select ng-model="atraccion.clasificacionSelected" ng-options="clasificacion for clasificacion in atraccion.clasificaciones">
                         </select>
                     </div>
                 </div>
 
                 <div class="form-group row">
-                    <button type="submit" class="btn btn-primary center-block">Agregar atracción</button>
+                    <button type="submit" class="btn btn-primary center-block">{{submitButton}}</button>
                 </div>
             </form>
 
