--- a/webserver/public/app/atracciones/views/listado.html
+++ b/webserver/public/app/atracciones/views/listado.html
@@ -54,8 +54,8 @@
         </div>
         <div class="panel-footer">
             <div class="btn-group" role="group" aria-label="edit-remove">
-                <a disabled href="#/atracciones/edit/{{id}}" class="btn btn-default" role="button">Edit</a>
-                <button disabled type="button" class="btn btn-default" ng-click="deleteAtraccion(id)">Remove</button>
+                <a disabled href="#/atracciones/edit/{{atraccion._id}}" class="btn btn-default" role="button">Edit</a>
+                <button type="button" class="btn btn-default" ng-click="deleteAtraccion(atraccion._id)">Remove</button>
             </div>
         </div>
     </div>
