#31 Edición de atracciones. Sigue faltando validacion para agregado y editado de ciudades.

--- a/webserver/public/app/atracciones/views/listado.html
+++ b/webserver/public/app/atracciones/views/listado.html
@@ -54,7 +54,7 @@
         </div>
         <div class="panel-footer">
             <div class="btn-group" role="group" aria-label="edit-remove">
-                <a disabled href="#/atracciones/edit/{{atraccion._id}}" class="btn btn-default" role="button">Edit</a>
+                <a href="#/atracciones/edit/{{atraccion._id}}" class="btn btn-default" role="button">Edit</a>
                 <button type="button" class="btn btn-default" ng-click="deleteAtraccion(atraccion._id)">Remove</button>
             </div>
         </div>
