--- a/client/MyApplication/app/src/main/res/layout/fragment_atracciones.xml
+++ b/client/MyApplication/app/src/main/res/layout/fragment_atracciones.xml
@@ -9,5 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@android:color/transparent"
-        android:dividerHeight="10dp"/>
+        android:dividerHeight="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"/>
 </LinearLayout>
