--- a/client/MyApplication/app/src/main/res/layout/fragment_ciudad.xml
+++ b/client/MyApplication/app/src/main/res/layout/fragment_ciudad.xml
@@ -20,7 +20,11 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp">
 
             <ImageView
                 android:id="@+id/imageTitle"
@@ -66,10 +70,11 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/infoText"
+            android:id="@+id/infoTextC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
+            android:text="asdasdasdasdad"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginStart="5dp" />
