Refactor a listado de atracciones.

--- a/webserver/public/app/atracciones/views/listado.html
+++ b/webserver/public/app/atracciones/views/listado.html
@@ -25,7 +25,7 @@
         <div class="panel-body">
             <div class="row">
                 <div class="col-xs-6 col-md-3">
-                    <img ng-src="{{'/api/atraccion/'+atraccion._id+'/imagen?filename='+atraccion.imagenes[0]}}" alt="" class="img-responsive"/>
+                    <img ng-src="{{atraccion.preview}}" alt="" class="img-responsive"/>
                     <!-- <img ng-src="{{'/api/ciudad/'+atraccion.id_ciudad+'/imagen'}}" alt="" class="img-responsive"/> -->
                 </div>
                 <div class="col-xs-6 col-md-9">
