#29 #33 Agregado y editado de videos en atracciones. Por el momento se hizo solo un video, pero es facil agregar la modificación para aceptar más de uno..

--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -78,7 +78,7 @@
                                     <source ng-src="{{atraccionVideo.vidSrc}}" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
-                                <button disabled type='button' class="btn btn-default btn-block" ng-click="deleteVideo(id,atraccionVideo)">Borrar video</button>
+                                <button type='button' class="btn btn-default btn-block" ng-click="deleteVideo(id,atraccionVideo)">Borrar video</button>
                             </div>
                         </div>
                     </div>
